--- a/buildmymusic/app.yaml
+++ b/buildmymusic/app.yaml
@@ -8,8 +8,13 @@ handlers:
 - url: /favicon\.ico
   static_files: favicon.ico
   upload: favicon\.ico
+
+- url: /stylesheets
+  static_dir: stylesheets
+  
 - url: .*
   script: main.app
+
 
 libraries:
 - name: webapp2
