--- a/buildmymusic/app.yaml
+++ b/buildmymusic/app.yaml
@@ -8,6 +8,8 @@ handlers:
 - url: /favicon\.ico
   static_files: favicon.ico
   upload: favicon\.ico
+- url: /scripts
+  static_dir: scripts
 - url: /stylesheets
   static_dir: stylesheets
 - url: .*
